mule-user-guide/v/3.6/transports-reference.adoc
= Available Transports

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/modules-reference[Modules Reference]. For more information on transports, see the following topics:

* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/connecting-using-transports[About Transports]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/configuring-a-transport[Configuring a Transport]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/creating-transports[Creating Transports]

Note that in Mule 3, CXF, and Jersey are no longer classified as transports. They are now modules that use an underlying transport (for instance HTTP or HTTPS) to communicate between client and service.

== Mule Transports

[%header,cols="2*"]
|===
|Transport |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ajax-transport-reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ejb-transport-reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/email-transport-reference[Email Transport] |This transport supplies various email connectivity options.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/file-transport-reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ftp-transport-reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/http-transport-reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/https-transport-reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/imap-transport-reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/imap-transport-reference[IMAPS Transport] |A secure version of the IMAP transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jdbc-transport-reference[JDBC Transport] +
*Enterprise* |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jetty-transport-reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jetty-ssl-transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jms-transport-reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|link:https://www.mulesoft.com/exchange#!/ldap-integration-connector[LDAP Transport] |Lets you send and receive Mule Messages to/from an LDAP directory.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/pop3-transport-reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/pop3-transport-reference[POP3S Transport] |A secure version of the POP3 transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/quartz-transport-reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/rmi-transport-reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/servlet-transport-reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/smtp-transport-reference[SMTP Transport] |Connectivity to SMTP servers.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/smtp-transport-reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ssl-and-tls-transports-reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/stdio-transport-reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/tcp-transport-reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ssl-and-tls-transports-reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/udp-transport-reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/vm-transport-reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mule-wmq-transport-reference[WebSphere MQ Transport] +
*Enterprise* |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/wsdl-connectors[WSDL Connectors] |The link:https://docs.mulesoft.com/mule-user-guide/v/3.6/cxf-module-reference[CXF Module] allows remote web services to be invoked using their WSDL contract.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xmpp-transport-reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

== Transport Matrix

[%header%autowidth.spread]
|===
|Transport |Doc |Inbound |Outbound |Request |Transactions |Streaming |Retries |MEPs |Default MEP |Maven Artifact
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ajax-connector[AJAX] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/ajax/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SchemaDoc] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-ajax

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/file-connector[File] |http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/file/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-file

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/ftp-transport-reference[FTP] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/ftp/package-summary.html[JavaDoc], link:https://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ftp/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |  |  |org.mule.transport:mule-transport-ftp-ee

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/https-transport-reference[HTTPS] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/http/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-https

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/imap-transport-reference[IMAP] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_imaps/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-imaps

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jdbc-transport-reference[JDBC] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/jdbc/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jdbc/namespace-overview.html[SchemaDoc]
|image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |image:error.png[error] |  |  |org.mule.transport:mule-transport-jdbc-ee

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jetty-transport-reference[Jetty SSL] |N/A, link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jetty-ssl/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-jetty-ssl

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/multicast-transport-reference[Multicast] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/multicast/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-multicast

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/imap-transport-reference[POP3S] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-pop3s

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/rmi-transport-reference[RMI] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/rmi/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-rmi

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/sftp-transport-reference[SFTP] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/sftp/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |one-way |org.mule.transport:mule-transport-sftp

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/smtp-transport-reference[SMTP] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SchemaDoc]
|image:error.png[error] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-smtps

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/stdio-transport-reference[STDIO] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/stdio/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-stdio

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/tls-configuration[TLS] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/ssl/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |one-way, request-response |request-response |org.mule.transport:mule-transport-tls

|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/vm-transport-reference[VM] |link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transport/vm/package-summary.html[JavaDoc], link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:check.png[check](XA) |image:check.png[check] |image:error.png[error] |one-way, request-response |one-way |org.mule.transport:mule-transport-vm
|===

 Legend

*Transport* - The name/protocol of the transport +
*Docs* - Links to the JavaDoc and SchemaDoc for the transport +
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint +
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint +
*Request* - Whether this endpoint can be queried directly with a request call (via MuleClient or the EventContext) +
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction. +
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming. +
*Retry* - Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft +
*MEPs* - Message Exchange Patterns supported by this transport +
*Default MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP +
*Maven Artifact* - The group name a artifact name for this transport in http://maven.apache.org/[Maven]

